# LocalBooru

./: .gitignore  .kspec-agents-hash  .setup-state.json  Cargo.toml  LICENSE  README.md  altstore-source.json  bench.py  bench2.py  launch-dev.sh  package-lock.json  package.json  project.meta.yaml  project.tasks.yaml  project.yaml  requirements.txt  run-dev.sh  start-portable.sh  start.sh  tagger  test_optical_flow.py
.beads/: deletions.jsonl  issues.jsonl  last-touched
.claude/: CLAUDE.md
.github/workflows/: build-ios.yml  build.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
addons/age-detector/: app.py
addons/auto-tagger/: app.py
addons/cast/: app.py
addons/frame-interpolation/: app.py
addons/svp/: app.py
addons/whisper-subtitles/: app.py
api/: __init__.py  bootstrap.py  config.py  database.py  main.py  migration.py  migration_per_directory.py  models.py
api/middleware/: access_control.py
api/migration/: __init__.py  import_runner.py  runner.py  types.py  utils.py
api/routers/: __init__.py  app_update.py  cast.py  collections.py  directories.py  images.py  library.py  network.py  settings.py  share.py  tags.py  users.py  watch_history.py
api/routers/directories/: crud.py  (+4 more)
api/services/: __init__.py  age_detector.py  auth.py  cast_discovery.py  cast_media_server.py  cast_session.py  certificate.py  cuda_ipc.py  directory_watcher.py  events.py  external_upload.py  file_tracker.py  gpu_video_pipeline.py  importer.py  metadata_extractor.py  model_downloader.py  network.py  nvidia_of_worker.py  nvidia_optflow.py  optical_flow.py  optical_flow_stream.py  rate_limit.py  rife_models.py  share_session.py  svp_platform.py  svp_stream.py  tagger.py  tailscale.py  task_queue.py  transcode_stream.py  video_preview.py  web_video_downloader.py  whisper_subtitle_stream.py
api/templates/: watch.html
api/tests/: __init__.py  test_migration.py
aur/: .SRCINFO  PKGBUILD
docs/: LINUX_PACKAGING.md  TRANSCODING.md
electron/: backendManager.js  directoryWatcher.js  ipc.js  main.js  menu.js  preload.js  updater.js  window.js
electron/backend/: config.js  health.js  index.js  manager.js  process.js
frontend/: DESIGN.md  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.js
frontend/android/: build.gradle
frontend/src/: App.css  App.jsx  api.js  index.css  main.jsx  serverManager.js  sslPinning.js  tauriAPI.js
modules/: android.yaml  core.yaml  desktop.yaml  main.yaml  test.yaml
scripts/: build-tauri-linux.sh  portable-launcher.nsi  portable-stub.nsi  prepare-python-bundle-linux.js  prepare-python-bundle.js  wait-for-build.sh
src-tauri/: Cargo.toml  GSTREAMER_WAYLAND.md  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/docs/: VFR_VIDEO_SUPPORT.md
src-tauri/linux/: com.localbooru.app.desktop
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/addons/: manager.rs  manifest.rs  mod.rs  proxy.rs  sidecar.rs  sources.rs
src-tauri/src/backend/: config.rs  health.rs  manager.rs  mod.rs  process.rs
src-tauri/src/db/: directory_db.rs  library.rs  migrations.rs  mod.rs  models.rs  pool.rs  schema.rs
src-tauri/src/routes/: addons.rs  app_update.rs  cast.rs  collections.rs  libraries.rs  library.rs  migration.rs  mod.rs  models.rs  network.rs  settings.rs  share.rs  svp_web.rs  tags.rs  users.rs  watch_history.rs
src-tauri/src/routes/directories/: mod.rs
src-tauri/src/routes/images/: adjustments.rs  batch.rs  helpers.rs  list.rs  mod.rs  single.rs
src-tauri/src/server/: error.rs  mod.rs  state.rs  utils.rs
src-tauri/src/server/middleware/: access_control.rs  auth.rs  mod.rs
src-tauri/src/services/: directory_watcher.rs  events.rs  file_tracker.rs  importer.rs  metadata.rs  mod.rs  rate_limit.rs  task_queue.rs  transcode.rs  video_preview.rs
src-tauri/src/video/: commands.rs  events.rs  interpolation_commands.rs  mod.rs  overlay.rs  player.rs  transcode.rs  transcode_commands.rs  vfr.rs
src-tauri/src/video/interpolation/: backends.rs  config.rs  mod.rs  pipeline.rs
tasks/01KK5NSBKVN4ZEP42HWBBM667W/: task.yaml
(+169 files in other folders)
