# Rust Workspace for LocalBooru
# This workspace contains the Tauri application and future Rust modules

[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
version = "0.3.10"
authors = ["DonutsDelivery <donutsdelivery@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/DonutsDelivery/LocalBooru"
edition = "2021"

[profile.release]
# Optimize for size while maintaining good performance
lto = true
codegen-units = 1
panic = "abort"
strip = true
