[package]
name = "localbooru"
version = "0.3.10"
description = "Local image library with automatic tagging"
authors = ["DonutsDelivery <donutsdelivery@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/DonutsDelivery/LocalBooru"
edition = "2021"
rust-version = "1.77.2"
default-run = "localbooru"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "localbooru_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

# Backend management dependencies
tokio = { version = "1", features = ["sync", "time", "rt"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dirs = "5"

# GStreamer video playback (prototype)
gstreamer = "0.23"
gstreamer-video = "0.23"
gstreamer-app = "0.23"
gstreamer-player = "0.23"
gstreamer-pbutils = "0.23"  # For media discovery and VFR analysis

# Utilities
uuid = { version = "1.0", features = ["v4"] }

tauri-plugin-dialog = "2.6.0"
tauri-plugin-clipboard-manager = "2.3.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!
custom-protocol = ["tauri/custom-protocol"]
